--- a/src/components/cart-icon/cart-icon.styles.scss
+++ b/src/components/cart-icon/cart-icon.styles.scss
@@ -7,15 +7,16 @@
   justify-content: center;
   cursor: pointer;
 
-  .shopping-icon {
-    width: 35px;
-    height: 35px;
-  }
+  // .shopping-icon {
+  //   width: 35px;
+  //   height: 35px;
+  // }
 
-  .item-count {
-    position: absolute;
-    font-size: 10px;
-    font-weight: bold;
-    bottom: 20px;
-  }
+  // .item-count {
+  //   position: absolute;
+  //   font-size: 12px;
+  //   font-weight: bold;
+  //   bottom: 18px;
+  //   color: rgb(184, 6, 6);
+  // }
 }
