--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -4,3 +4,12 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 600px) {
+  .directory-menu {
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
