--- a/src/components/preview-collection/collection-preview.styles.scss
+++ b/src/components/preview-collection/collection-preview.styles.scss
@@ -13,3 +13,10 @@
     justify-content: space-between;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .preview {
+    display: flex;
+    flex-direction: column;
+  }
+}
