--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -4,3 +4,11 @@
   justify-content: space-between;
   margin: 30px auto;
 }
+
+@media screen and (max-width: 600px) {
+  .sign-in-and-sign-up {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+  }
+}
